refactor(demo): 代码审查整改 —— 有界内存/并发安全/路由表/异常映射 + 23 个 web 层单测
P0 修复：
- Store 无界增长会 OOM → 改 LRU 有界（≤200 条 / ≤512MB），字段私有化 + 访问器
- 请求体无上限 → Http.body 边读边计数，超 100MB 抛 PayloadTooLargeException(413)
- Batch 用可变静态计数器，并发调用互相污染 → Case 改不可变、统计局部化

P1 修复：
- ApiRoutes 300 行巨型 switch → Router 路由表 + 按模块分组注册(32 端点)
- web 层零单测 → 新增 JsonTest/StoreTest/HttpTest/RouterAndBatchTest 共 23 个
- OfficiaException 一律 500 → 改 400（多为输入不合规，报 500 误导为服务故障）

P2：图像参数名自描述(x/y/width/height/amount/factor)、MIME 改静态表、
优雅停机(shutdown hook)、upca 支持 withText。

实测：36 单测全绿；400/404/413 映射正确；限页 30、条码、批量回归 10/10 均正常。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>